objects/SVMXC__SVMX_Event__c.object
<CustomObject>
    <description>This object stores Calendar events for technicians that are not Salesforce users as well as equipment whose calendars are tracked for dispatching.</description>
    <fields>
        <fullName>SVMXC__ActivityDateTime__c</fullName>
        <description>Event start date/time</description>
        <label>ActivityDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__ActivityDate__c</fullName>
        <description>Event start date</description>
        <label>ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Time_Total__c</fullName>
        <description>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</description>
        <inlineHelpText>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</inlineHelpText>
        <label>Total Break Time (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Event description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time_Home__c</fullName>
        <description>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</description>
        <inlineHelpText>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</inlineHelpText>
        <label>Travel Time Back to Home Base (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <description>Driving or travel time to this work order location from the last work order location or from the home base.</description>
        <inlineHelpText>Driving or travel time to this work order location from the last work order location or from the home base.</inlineHelpText>
        <label>Travel Time to Workorder Location (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__DurationInMinutes__c</fullName>
        <description>Event duration</description>
        <label>DurationInMinutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndDateTime__c</fullName>
        <description>Event end date/time</description>
        <label>EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this is an all-day event?</description>
        <inlineHelpText>Whether this is an all-day event?</inlineHelpText>
        <label>All-Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <description>Location of the event</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_After__c</fullName>
        <description>Total overhead or flex time at the end of the service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time at the end of the service at the work order location.</inlineHelpText>
        <label>Overhead Time at End of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_Before__c</fullName>
        <description>Total overhead or flex time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Overhead Time at Start of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Appointment_Status__c</fullName>
        <description>The status of the Event.</description>
        <label>Appointment Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Idle_Time__c</fullName>
        <description>Idle time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Idle time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Idle Time for the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Integration_Source__c</fullName>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                    <default>true</default>
                    <label>Local</label>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Latitude__c</fullName>
        <description>This field is created to store the latitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the latitude of the non work order events of the technicians.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Longitude__c</fullName>
        <description>This field is created to store the longitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the longitude of the non work order events of the technicians.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
        <description>This field is used to store the date and time of the message generated by the external optimization system that is successfully processed in ServiceMax . The date and time stamp is when the message was created by the external optimization system and sent to ServiceMax.</description>
        <label>Optimizer Message Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Status__c</fullName>
        <description>This field is used to store scheduling status</description>
        <inlineHelpText>This field is used to store scheduling status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Version_Number__c</fullName>
        <description>This field increments by 1 for every mapped field update for Service Board to check conflicts and apply correct updates.</description>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Duration__c</fullName>
        <description>Total service time, which is the wrench time of the service</description>
        <inlineHelpText>Total service time or the wrench time of the service.</inlineHelpText>
        <label>Service Time (in Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service order number. Is a lookup to an existing service order in ServiceMax</description>
        <inlineHelpText>Service order number. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>ServiceMax Events</relationshipLabel>
        <relationshipName>ServiceMax_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service team that owns the event. Reference to an existing service team record in ServiceMax</description>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>ServiceMax Events</relationshipLabel>
        <relationshipName>SVMX_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__StartDateTime__c</fullName>
        <description>Event start date/time</description>
        <label>StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technician that owns the event. Reference to an existing technician record in ServiceMax</description>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>ServiceMax Events</relationshipLabel>
        <relationshipName>SVMX_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <description>List of activity types.</description>
        <inlineHelpText>List of activity types.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Overnight Stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__WhatId__c</fullName>
        <description>The source record related to the event</description>
        <label>WhatId</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__WhoId__c</fullName>
        <description>Not used</description>
        <label>WhoId</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>ServiceMax Event</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>